--- a/src/App.css
+++ b/src/App.css
@@ -4,11 +4,18 @@
   box-sizing: border-box;
 }
 
+h1{
+  display: flex;
+  align-items: center;
+  gap: 15px;
+}
+
 .header {
   background-color: rgb(105, 105, 105);
 }
 
 .navBar{
+  width: 100%;
   background-color: rgb(105, 105, 105);
   display: flex;
   justify-content: space-between;
@@ -22,15 +29,32 @@
 
 .listaNav{
   display: flex;
-  gap: 20px;
   list-style: none;
+  text-decoration: none;
+  color: white;
+  font-size: 25px;
+  gap: 40px;
+}
+.listaNav a{
+  color: white;
+}
+.listaNav a:hover{
+  color: black;
 }
 
 .logo {
   width: auto;
   height:80px;
+
 }
 
 .cartIcon{
   justify-content: flex-end !important;
 }
+
+
+.cartImg{
+  height: 45px;
+  width: auto;
+}
+
