--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,21 @@ h1{
   font-size: 40px;
 }
 
+h2{
+  text-align: center;
+  font-size: 40px;
+  background-color: rgba(105, 105, 105, 0.541) ;
+}
+
+h3{
+  text-align: center;
+  font-size: 30px;
+}
+
+main{
+  padding-top: 100px;
+}
+
 .header {
   background-color: rgb(105, 105, 105);
 }
@@ -59,3 +74,42 @@ h1{
   width: auto;
 }
 
+.card{
+  list-style-type: none;
+  margin: 15px;
+  display: grid;
+  grid-template-columns:repeat(3, 1fr) ;
+  grid-template-rows: auto;
+  gap: 15px;
+}
+
+.li{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color:  rgba(105, 105, 105, 0.288);
+  margin: 15px;
+  border-radius: 80px;
+  transition: 0.3s ease;
+}
+.li:hover{
+  box-shadow: 0 10px 20px rgb(0, 0, 0);
+}
+
+.li-button{
+  margin-bottom: 20px;
+}
+
+.img-card{
+  width: 60%;
+  height: auto;
+  margin-top: 30px;
+  border-radius: 30px;
+  transition: 0.3s ease;
+}
+
+.img-card:hover{
+  width: 63%;
+  height: auto;
+}
