--- a/src/App.css
+++ b/src/App.css
@@ -4,10 +4,6 @@
   box-sizing: border-box;
 }
 
-.inicio{
-  margin-top: 90px;
-}
-
 h1{
   display: flex;
   align-items: center;
@@ -26,9 +22,6 @@ h3{
   font-size: 30px;
 }
 
-main{
-  padding-top: 100px;
-}
 
 .header {
   background-color: rgb(105, 105, 105);
@@ -42,7 +35,7 @@ main{
   padding: 10px 30px;
   align-items: center;
   gap: 20px;
-  position: fixed;
+  position: sticky;
   top: 0;
   z-index: 1000;
 }
