--- a/src/App.css
+++ b/src/App.css
@@ -82,6 +82,8 @@ h3{
   display: grid;
   grid-template-columns:repeat(3, 1fr) ;
   grid-template-rows: auto;
+  justify-content: center;
+  justify-items: center;
   gap: 15px;
 }
 
